# imarina

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  compose.test.yml  compose.yml  pyproject.toml  requirements.txt  test-compose.yml  test.Dockerfile
.github/workflows/: docker.yml
services/onedrive/: run.sh
services/onedrive/conf/: config
src/: TokenManager.py  arguments.py  debug_drive_id.py  filesystem.py  log.py  main.py  secret.py  sharepoint_uploader.py
src/imarina/: cli.py  mail.py
src/imarina/commands/backup/: cli.py
src/imarina/commands/download/: cli.py
src/imarina/commands/publish/: cli.py
src/imarina/commands/upload/: cli.py
src/imarina/core/: Researcher.py  TokenManager.py  a3_excel.py  a3_mapper.py  cli_global.py  date_utile.py  defines.py  excel.py  filesystem.py  ftp.py  imarina_excel.py  imarina_mapper.py  log_utils.py  mail.py  secret.py  shared_options.py  sharepoint.py  str_utils.py  translations.py  vault.py
tests/: conftest.py  test_a3_data.py  test_changed_jobs.py  test_main.py  test_sharepoint_uploader.py
